--- a/login.css
+++ b/login.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #F2F2F2;
+}
+
 /* body {
     background-color: powderblue;
 }
@@ -16,7 +20,7 @@ border-collapse: collapse;
 th, td, tr {
 border: 1px solid #444444;
 } */
-div {
+/* div {
     border: 2px solid red;
 }
 header {
@@ -52,7 +56,7 @@ footer {
     top: 0;
     left:0;
     z-index: -1;
-}
+} */
 /* .div1class {
 border: 2px solid blue;
 font-size : 20px;
