--- a/login.css
+++ b/login.css
@@ -1,70 +1,198 @@
-body{
-    background-color: #F2F2F2;
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Raleway', sans-serif;
+    color: #F2F2F2;
 }
 
-/* body {
-    background-color: powderblue;
+#container-login {
+    background-color: #FCFCFC;
+    position: relative;
+    top: 20%;
+    margin: auto;
+    width: 340px;
+    height: 445px;
+    border-radius: 0.35em;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
 }
-h1 {
-color: blue;
+
+#container-register {
+    background-color: #FCFCFC;
+    position: relative;
+    top: 20%;
+    margin: auto;
+    width: 340px;
+    height: 480px;
+    border-radius: 0.35em;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
 }
-p {
-color: red;
-padding: 30px;
-}
-table {
-width: 100%;
-border: 1px solid #444444;
-border-collapse: collapse;
-}
-th, td, tr {
-border: 1px solid #444444;
-} */
-/* div {
-    border: 2px solid red;
-}
-header {
-    border: 2px solid orange;
-}
-nav {
-    border: 2px solid yellow;
-}
-section {
-    border: 2px solid green;
-}
-article {
-    border: 2px solid blue;
-}
-aside {
-    border: 2px solid navy;
-}
-footer {
-    border: 2px solid purple;
-}
-.welcomeContainer{
-    height: 100%;
+
+#title {
+    position: relative;
+    background-color: #DD575C;
     width: 100%;
-    z-index: 1;
-    content: "";
+    padding: 20px 0px;
+    border-top-left-radius: 0.22em;
+    border-top-right-radius: 0.22em;
+    font-size: 22px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 }
-.welcomeContainer::after{
-    /* content: "aoewijaw;eofiawe;ofi"; */
-    background-image: url("./imgs/gmk_Serika.png");
-    opacity: 0.5;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left:0;
-    z-index: -1;
-} */
-/* .div1class {
-border: 2px solid blue;
-font-size : 20px;
+
+.lock {
+	position: relative;
+	top: 2px;
 }
-.city {
-background-color: tomato;
-color: white;
-border: 2px solid black;
-margin: 20px;
-padding: 10px;
-} */
+
+.input {
+	margin: auto;
+    width: 240px;
+    border-radius: 4px;
+    background-color: #ededed;
+    padding: 8px 0px;
+    margin-top: 15px;
+}
+
+.input-addon {
+	position: relative;
+	top: -2px;
+    float: left;
+    background-color: #ededed;
+    border: 1px solid #ededed;
+    padding: 4px 8px;
+	color: #757575;
+    border-right: 1px solid #757575;
+}
+
+input[type=checkbox] {
+	cursor: pointer;
+}
+input::placeholder{
+    color : #b6b5b5;
+}
+input[type=text] {
+    color: #5e5e5e;
+    
+    margin: 0;
+    background-color: #ededed;
+    border: 1px solid #ededed;
+    padding: 6px 0px;
+    border-radius: 3px;
+}
+
+input[type=text]:focus {
+    border: 1px solid #ededed;
+}
+
+input[type=password] {
+	color: #5e5e5e;
+    margin: 0;
+    background-color: #ededed;
+    border: 1px solid #ededed;
+    padding: 6px 0px;
+    border-radius: 3px;
+}
+
+input[type=password]:focus {
+    border: 1px solid #ededed;
+}
+
+input[type=email] {
+	color: #949494;
+    margin: 0;
+    background-color: #ededed;
+    border: 1px solid #ededed;
+    padding: 6px 0px;
+    border-radius: 3px;
+}
+
+input[type=email]:focus {
+    border: 1px solid #ededed;
+}
+
+.forgot-password {
+    position: relative;
+    bottom: 0%;
+}
+
+.forgot-password a:link {
+    color: #f7c899;
+    text-decoration: none;
+}
+
+.forgot-password a:visited {
+    color: #f7c899;
+    text-decoration: none;
+}
+
+.forgot-password a:hover {
+    color: #449494;
+    transition: color 1s;
+}
+
+.privacy {
+    margin-top: 5px;
+    position: relative;
+    font-size: 12px;
+    bottom: 0%;
+}
+
+.privacy a:link {
+    color: #eaa05b;
+    text-decoration: none;
+}
+
+.privacy a:visited {
+    color: #eaa05b;
+    text-decoration: none;
+}
+
+.privacy a:hover {
+    color: #549494;
+    transition: color 1s;
+}
+
+*:focus {
+    outline: none;
+}
+
+.remember-me {
+    margin: 10px 0;
+}
+
+/* input[type=submit] { */
+#loginButton {
+    padding: 6px 25px;
+    background: #FF7F4F;
+    color: #fff;
+    font-weight: bold;
+    border: 0 none;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.register {
+	margin: auto;
+    padding: 16px 0;
+    text-align: center;
+    margin-top: 40px;
+    width: 85%;
+    border-top: 1px solid #C1C3C6;
+}
+
+.clearfix {
+	clear: both;
+}
+
+#register-link {
+    margin-top: 10px;
+    padding: 6px 25px;
+    background: #FF7F4F;
+    color: #fff;
+    font-weight: bold;
+    border: 0 none;
+    cursor: pointer;
+    border-radius: 3px;
+}
